2009-08-14  Eli Zaretskii  <eliz@gnu.org>

	* international/ucs-normalize.el: Add a `coding' file variable.

	* Makefile.in (ELCFILES): Add international/ucs-normalize.elc.

2009-08-14  Sam Steingold  <sds@gnu.org>

	* vc-cvs.el (vc-cvs-merge-news): Yet another fix of message parsing.

2009-08-13  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (help-argument-name): Define it here instead of
	help-fns.el, because in daemon mode help-fns.el may be loaded when
	faces are still uninitialized (Bug#1078).

	* help-fns.el (help-argument-name): Move defface to faces.el.

2009-08-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-inferior-io-mode): Use start-process to
	create buffer with a pty but no process so that GDB can make the
	inferior the controlling process.

2009-08-13  Kenichi Handa  <handa@m17n.org>

	* international/ucs-normalize.el: New file.

2009-08-13  Richard Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-get-attr-names):
	Accept an attribute header that is too short.

	* mail/rmail.el (rmail-forget-messages):
	Ignore nil elt in rmail-message-vector.  Use dotimes.

	* progmodes/compile.el (compilation-goto-locus):
	Use next-error-move-function.

	* simple.el (next-error-move-function): New variable.

2009-08-12  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (lgrep): Ensure that `default-directory' is
	always non-nil.  (Bug#4052)

	* replace.el (read-regexp): Return empty string when
	`default-value' is nil.
	(keep-lines-read-args): Don't use empty string as the
	default value for `read-regexp'.  (Bug#2495)

2009-08-12  Juri Linkov  <juri@jurta.org>

	* international/mule-cmds.el (ucs-insert): Change arguments
	from `arg' to `character', `count', `inherit' to be the same
	as in `insert-char'.  Doc fix.  (Bug#4039)

	* international/mule-conf.el (utf-16be-with-signature): Doc fix.

2009-08-12  Juri Linkov  <juri@jurta.org>

	* files-x.el: New file.

	* files.el: Move code that deals with adding/deleting